<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/full_app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="138dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/label_img_attack_image"
        android:scaleType="centerCrop"
        android:src="@drawable/sat02" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hostname"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/victim_hostname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri|textNoSuggestions"
                android:hint="@string/hint_http_addr"
                android:singleLine="true" />
            
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nr_threads"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/attack_threads_nr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/hint_attack_threads_count" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nr_sockets"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/attack_sockets_nr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/hint_attack_sockets_count" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nr_connections"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/attack_conn_nr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/hint_attack_conn_count" />

            <Button
                android:id="@+id/attack_victim_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/attack_button_label" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>